--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,6 @@
-name: Build and Update SoccerAnalytics
+name: Create Release
 
 on:
-  pull_request:
-    branches:
-      - main
-    types: [opened, synchronize, reopened]
   push:
     branches:
       - main
@@ -13,73 +9,16 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  issues: write
 
 jobs:
-  build:
+  create_release:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
-          fetch-depth: 0
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Lint with flake8
-        run: make lint
-
-      - name: Generate GitHub App token
-        id: get_app_token
-        uses: tibdex/github-app-token@v2
-        with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.APP_PRIVATE_KEY }}
-
-      - name: Determine snapshot version
-        id: snapshot_version
-        run: |
-          git fetch --tags
-          last_tag=$(git tag --list "v*" | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sort -V | tail -n1)
-          if [ -z "$last_tag" ]; then
-            last_tag="v0.0.0"
-          fi
-          last_tag=${last_tag#v}
-          IFS='.' read -r major minor patch <<< "$last_tag"
-          snapshot_version="$major.$minor.$patch-snapshot-${{ github.event.number }}"
-          echo "snapshot_version=$snapshot_version" >> $GITHUB_OUTPUT
-
-      - name: Set Git identity
-        run: |
-          git config user.name "github-app[bot]"
-          git config user.email "github-app[bot]@users.noreply.github.com"
-
-      - name: Update version in PR
-        run: |
-          sed -i "s/version='[^']*'/version='${{ steps.snapshot_version.outputs.snapshot_version }}'/" setup.py
-          git add setup.py
-          if ! git diff --cached --quiet; then
-            git commit -m "Update version to ${{ steps.snapshot_version.outputs.snapshot_version }}"
-            git push https://x-access-token:${{ steps.get_app_token.outputs.token }}@github.com/${{ github.repository }} HEAD:${{ github.head_ref }}
-          fi
-
-      - name: Create snapshot tag
-        run: |
-          snapshot_tag="v${{ steps.snapshot_version.outputs.snapshot_version }}"
-          git tag "$snapshot_tag"
-          git push https://x-access-token:${{ steps.get_app_token.outputs.token }}@github.com/${{ github.repository }} --tags
-
-  post_merge_release:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    # Éviter les boucles sur les commits de snapshot ou de release
+    if: |
+      !contains(github.event.head_commit.message, 'snapshot') &&
+      !contains(github.event.head_commit.message, '[skip ci]') &&
+      !startsWith(github.event.head_commit.message, 'Release:')
     steps:
       - uses: actions/checkout@v4
         with:
@@ -109,67 +48,68 @@ jobs:
           tag_version="v$new_version"
           echo "new_version=$new_version" >> $GITHUB_OUTPUT
           echo "tag_version=$tag_version" >> $GITHUB_OUTPUT
-
-      - name: Set Git identity
-        run: |
-          git config user.name "github-app[bot]"
-          git config user.email "github-app[bot]@users.noreply.github.com"
+          echo "Next version will be: $new_version"
 
       - name: Check if release already exists
         id: check_release
         run: |
           branch_name="release/${{ steps.release_version.outputs.new_version }}"
+          tag_name="${{ steps.release_version.outputs.tag_version }}"
           
-          # Vérifier si la branche existe déjà localement ou à distance
+          # Vérifier la branche
           if git ls-remote --exit-code --heads origin "$branch_name" >/dev/null 2>&1; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-            echo "Release branch $branch_name already exists, skipping creation"
+            echo "branch_exists=true" >> $GITHUB_OUTPUT
           else
-            echo "exists=false" >> $GITHUB_OUTPUT
-            echo "Release branch $branch_name does not exist, will create"
+            echo "branch_exists=false" >> $GITHUB_OUTPUT
+          fi
+          
+          # Vérifier le tag
+          if git ls-remote --exit-code --tags origin "$tag_name" >/dev/null 2>&1; then
+            echo "tag_exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "tag_exists=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Update version and create PR
-        if: steps.check_release.outputs.exists == 'false'
+      - name: Set Git identity
+        if: steps.check_release.outputs.branch_exists == 'false'
         run: |
-          # Modifier la version dans le répertoire de travail
+          git config user.name "github-app[bot]"
+          git config user.email "github-app[bot]@users.noreply.github.com"
+
+      - name: Update version for release
+        if: steps.check_release.outputs.branch_exists == 'false'
+        run: |
           sed -i "s/version='[^']*'/version='${{ steps.release_version.outputs.new_version }}'/" setup.py
 
       - name: Create PR for release bump
         id: create_pr
-        if: steps.check_release.outputs.exists == 'false'
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ steps.get_app_token.outputs.token }}
-          commit-message: "Release: bump version to ${{ steps.release_version.outputs.new_version }}"
-          committer: "github-app[bot] <github-app[bot]@users.noreply.github.com>"
-          author: "github-app[bot] <github-app[bot]@users.noreply.github.com>"
-          branch: "release/${{ steps.release_version.outputs.new_version }}"
-          delete-branch: true
-          base: main
-          title: "Release v${{ steps.release_version.outputs.new_version }}"
-          body: |
-            🚀 **Automatic Release PR**
-            
-            This PR bumps the version to `v${{ steps.release_version.outputs.new_version }}` and prepares for release.
-            
-            **Changes:**
-            - Updated version in `setup.py`
-            
-            **Next steps:**
-            1. Review and approve this PR
-            2. Merge to trigger tag creation
-          labels: "release,automated"
-          assignees: ${{ github.repository_owner }}
+        if: steps.check_release.outputs.branch_exists == 'false'
+        run: |
+          branch_name="release/${{ steps.release_version.outputs.new_version }}"
+          git checkout -b "$branch_name"
+          git add setup.py
+          git commit -m "Release: bump version to ${{ steps.release_version.outputs.new_version }}"
+          git push https://x-access-token:${{ steps.get_app_token.outputs.token }}@github.com/${{ github.repository }} HEAD:"$branch_name"
+          
+          pr_url=$(gh pr create \
+            --base main \
+            --head "$branch_name" \
+            --title "Release v${{ steps.release_version.outputs.new_version }}" \
+            --body "🚀 **Automatic Release PR**
+
+          This PR bumps the version to \`v${{ steps.release_version.outputs.new_version }}\`.
+
+          **⚠️ Important:** This PR should be merged immediately after review to complete the release process." \
+            --label "release,automated")
+          
+          echo "pr_url=$pr_url" >> $GITHUB_OUTPUT
+          echo "Created release PR: $pr_url"
+        env:
+          GH_TOKEN: ${{ steps.get_app_token.outputs.token }}
 
       - name: Create release tag
-        if: steps.create_pr.outputs.pull-request-number
+        if: steps.create_pr.outputs.pr_url != '' && steps.check_release.outputs.tag_exists == 'false'
         run: |
           git tag "${{ steps.release_version.outputs.tag_version }}"
           git push https://x-access-token:${{ steps.get_app_token.outputs.token }}@github.com/${{ github.repository }} --tags
-
-      - name: Output PR information
-        if: steps.create_pr.outputs.pull-request-number
-        run: |
-          echo "Created PR #${{ steps.create_pr.outputs.pull-request-number }}"
-          echo "PR URL: ${{ steps.create_pr.outputs.pull-request-url }}"
+          echo "Created release tag: ${{ steps.release_version.outputs.tag_version }}"
