--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,11 @@ jobs:
           echo "tag_version=$tag_version" >> $GITHUB_OUTPUT
           echo "Tag version: $tag_version"
 
+      - name: Set Git identity
+        run: |
+          git config user.name "github-app[bot]"
+          git config user.email "github-app[bot]@users.noreply.github.com"
+
       - name: Create release branch & PR (if workflow_dispatch)
         if: github.event_name == 'workflow_dispatch'
         run: |
