--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,34 @@
 aiohttp==3.8.3
 aiosignal==1.4.0
 async-timeout==4.0.3
-attrs==25.3.0
+attrs==25.4.0
 beautifulsoup4==4.11.1
 certifi==2025.4.26
 charset-normalizer==2.1.1
-coverage==7.10.1
+coverage==7.10.7
 dnspython==2.7.0
 et_xmlfile==2.0.0
 fake-useragent==2.0.3
 flake8==7.2.0
-frozenlist==1.7.0
+exceptiongroup==1.3.1
+frozenlist==1.8.0
 fuzzywuzzy==0.18.0
 h11==0.16.0
-idna==3.10
+idna==3.11
 importlib-metadata==6.11.0
 importlib_resources==6.4.0
 iniconfig==2.1.0
 Levenshtein==0.25.0
 lxml==4.9.3
 mccabe==0.7.0
-multidict==6.6.3
+multidict==6.7.0
 numpy==2.0.0
 openpyxl==3.1.2
 outcome==1.3.0.post0
 packaging==25.0
 pandas==2.2.2
 pluggy==1.6.0
-propcache==0.3.2
+propcache==0.4.1
 psycopg2-binary==2.9.9
 pycodestyle==2.13.0
 pyflakes==3.3.2
@@ -44,21 +45,22 @@ python-Levenshtein==0.25.0
 pytz==2022.7
 PyYAML==6.0.1
 RapidFuzz==3.13.0
-requests==2.32.0
+requests==2.32.4
 selenium==4.29.0
 six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
-soupsieve==2.7
+soupsieve==2.8.1
 trio==0.30.0
 trio-websocket==0.12.2
-typing_extensions==4.14.1
+tomli==2.3.0
+typing_extensions==4.15.0
 tzdata==2025.2
 understat==0.1.12
 Unidecode==1.3.6
-urllib3==2.5.0
+urllib3==2.6.0
 webdriver-manager==4.0.2
 websocket-client==1.8.0
 wsproto==1.2.0
-yarl==1.20.1
+yarl==1.22.0
 zipp==3.23.0
